--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,30 @@
 
   <build>
    <plugins>
+
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+					<archive>
+						<manifest>
+							<mainClass></mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+
+			</plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -20,6 +44,7 @@
           <compilerVersion>1.6</compilerVersion>
         </configuration>
       </plugin>
+    
 	 </plugins>
   </build>
 
@@ -51,12 +76,15 @@
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
 			<version>2.1.0</version>
+			<!-- <classifier>jar-with-dependencies</classifier>
+        <type>jar</type> -->
 		</dependency>
         <!-- Storm Dependency -->
         <dependency> 
           <groupId>storm</groupId>
           <artifactId>storm</artifactId>
           <version>0.9.0.1</version>
+          <scope>provided</scope>
        </dependency>
 		
 
